fix: user-experience on ipad, section stretches over whole viewport

--- a/css/base.css
+++ b/css/base.css
@@ -105,7 +105,7 @@ p {
         font-size: 1rem;
     }
     section {
-        height: 60vh;
+        height: 98vh;
     }
     #navi {
         padding: 0;
